--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -154,10 +154,13 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-#opacity-rule = [
-#  "90:class_g = 'Xfce4-terminal' && focused",
-#  "60:class_g = 'Xfce4-terminal' && !focused"
-#];
+opacity-rule = [
+  "0:_NET_WM_STATE@[*]:32a *= '_NET_WM_STATE_HIDDEN'",
+  "80:class_g = 'Xfce4-terminal' && focused",
+  "45:class_g = 'Xfce4-terminal' && !focused",
+  "75:class_g = 'Insomnia'",
+  "85:class_g = 'beekeeper-studio'"
+];
 
 
 #################################
@@ -166,11 +169,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "kernel" 
-# blur-method = "dual-kawase" 
+# blur-method = "kernel" 
+blur-method = "dual_kawase" 
 blur-size = 5 
 #
-blur-deviation = true
+# blur-deviation = true
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
@@ -195,7 +198,7 @@ blur-deviation = true
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-blur-kern = "3x3box";
+# blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
@@ -218,8 +221,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = 'glx'
-backend = "xrender";
+backend = "glx";
+# backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
