Some fixes on polybar
- Enable polybar IPC
- Add script to hide polybar on startup
- Fix modules/launcher colors variables
- Use backlight instead of xbacklight
- Remove 'muted' label from pulseaudio

--- a/.config/polybar/modules/pulseaudio.ini
+++ b/.config/polybar/modules/pulseaudio.ini
@@ -6,7 +6,7 @@ format-volume = <label-volume>
 label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted =  muted
+label-muted = 
 label-muted-foreground = #666
 
 bar-volume-width = 10
