--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -45,7 +45,7 @@ font-5 = Font Awesome 5 Brands:pixelsize=12:antialias=true;3
 
 modules-left = launcher i3
 ;modules-center = mpd
-modules-right = player-mpris-tail xbacklight pulseaudio memory cpu battery date powermenu
+modules-right = player-mpris-tail backlight pulseaudio memory cpu battery date
 
 tray-position = right
 tray-padding = 2
@@ -64,6 +64,8 @@ wm-restack = i3
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+enable-ipc = true
 
 [settings]
 screenchange-reload = true
