--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -68,7 +68,8 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
   "class_g = 'Rofi'",
-  "name = 'rofi'"
+  "name = 'rofi'",
+  "name *= 'Android Emulator'"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -156,10 +157,14 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # opacity-rule = []
 opacity-rule = [
   "0:_NET_WM_STATE@[*]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "80:class_g = 'Xfce4-terminal' && focused",
-  "45:class_g = 'Xfce4-terminal' && !focused",
+  "80:class_g = 'Xfce4-terminal'",
   "75:class_g = 'Insomnia'",
-  "85:class_g = 'beekeeper-studio'"
+  "85:class_g = 'beekeeper-studio'",
+  "80:class_g = 'thunar'",
+  "80:class_g = 'Thunar'",
+  "100:name *= 'YouTube'",
+  "85:class_g = 'vivaldi-stable'",
+  "85:class_g = 'Vivaldi-stable'",
 ];
 
 
@@ -207,8 +212,7 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c",
-  "name = 'rofi'",
-  "class_g = 'Rofi'"
+  "name *= 'Android Emulator'"
 ];
 
 #################################
