--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,7 +15,7 @@ shadow = true;
 shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+#shadow-opacity = 0.75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -24,11 +24,6 @@ shadow-offset-x = -7;
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
 shadow-offset-y = -7;
-
-# Avoid drawing shadows on dock/panel windows. This option is deprecated,
-# you should use the *wintypes* option in your config file instead.
-#
-# no-dock-shadow = false
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated, 
 # you should use the *wintypes* option in your config file instead.
@@ -67,8 +62,6 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Rofi'",
-  "name = 'rofi'",
   "name *= 'Android Emulator'"
 ];
 
@@ -156,15 +149,17 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 opacity-rule = [
-  "0:_NET_WM_STATE@[*]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "80:class_g = 'Xfce4-terminal'",
-  "75:class_g = 'Insomnia'",
-  "85:class_g = 'beekeeper-studio'",
-  "80:class_g = 'thunar'",
-  "80:class_g = 'Thunar'",
-  "100:name *= 'YouTube'",
-  "85:class_g = 'vivaldi-stable'",
-  "85:class_g = 'Vivaldi-stable'",
+  #"0:_NET_WM_STATE@[*]:32a *= '_NET_WM_STATE_HIDDEN'",
+  #"80:class_g = 'Code'",
+  #"75:class_g = 'Insomnia'",
+  #"85:class_g = 'beekeeper-studio'",
+  #"80:class_g = 'thunar'",
+  #"80:class_g = 'Thunar'",
+  #"100:name *= 'YouTube'",
+  #"100:name *= 'Disney+'",
+  #"100:name *= 'Netflix'",
+  #"85:class_g = 'vivaldi-stable'",
+  #"85:class_g = 'Vivaldi-stable'",
 ];
 
 
@@ -175,8 +170,8 @@ opacity-rule = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "kernel" 
-blur-method = "dual_kawase" 
-blur-size = 5 
+#blur-method = "dual_kawase" 
+#blur-size = 5 
 #
 # blur-deviation = true
 
@@ -208,12 +203,12 @@ blur-size = 5
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "name *= 'Android Emulator'"
-];
+#blur-background-exclude = [
+  #"window_type = 'dock'",
+  #"window_type = 'desktop'",
+  #"_GTK_FRAME_EXTENTS@:c",
+  #"name *= 'Android Emulator'"
+#];
 
 #################################
 #       General Settings        #
@@ -225,8 +220,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "glx";
-# backend = "xrender";
+#backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -431,9 +426,11 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+  dock = { shadow = true; }
   dnd = { shadow = false; }
   # popup_menu = { opacity = 0.8; }
   # dropdown_menu = { opacity = 0.8; }
 };
+
+corner-radius = 5
