Update polybar files
- Add new modules (microphone, speed fan, calendar)
- And others small changes

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,12 +12,12 @@ include-file = ~/.config/polybar/modules/modules-enabled.ini
 [bar/main]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+;height = 27
+height = 30
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 0
-fixed-center = false
-bottom = true
+radius = 5
+fixed-center = true 
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -27,7 +27,7 @@ line-color = #f00
 
 
 border-size = 10
-border-top-size = 0
+border-bottom-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -36,19 +36,19 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-0 = fixed:pixelsize=10;2
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;2
+font-2 = siji:pixelsize=10;2
 font-3 = Font Awesome 5 Free Solid:pixelsize=12:antialias=true;3
 font-4 = Font Awesome 5 Free Regular:pixelsize=12:antialias=true;3
 font-5 = Font Awesome 5 Brands:pixelsize=12:antialias=true;3
 
-modules-left = launcher i3
-;modules-center = mpd
-modules-right = player-mpris-tail backlight pulseaudio memory cpu battery date
+modules-left = launcher i3 
+modules-center = xwindow 
+modules-right = player-mpris-tail pulseaudio-microphone pulseaudio backlight battery memory cpu system-fan-speed popup-calendar
 
-tray-position = right
-tray-padding = 2
+;tray-position = right
+;tray-padding = 2
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
