--- a/.config/polybar/modules/alsa.ini
+++ b/.config/polybar/modules/alsa.ini
@@ -1,13 +1,13 @@
-[module/pulseaudio]
-type = internal/pulseaudio
+[module/alsa]
+type = internal/alsa
 
-; format-volume = <label-volume> <bar-volume>
-format-volume = <label-volume>
-label-volume =   %percentage%%
+format-volume = <label-volume> <bar-volume>
+label-volume = VOL
 label-volume-foreground = ${root.foreground}
 
-label-muted = 
-label-muted-foreground = #666
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+label-muted = sound muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -25,3 +25,5 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
+
+
