--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -4,7 +4,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #111
+background = #090b10
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
