--- a/.config/polybar/modules/launcher.ini
+++ b/.config/polybar/modules/launcher.ini
@@ -3,8 +3,8 @@ type = custom/text
 content = 
 
 ; "content" has the same properties as "format-NAME"
-content-background = ${colors.primary}
-content-foreground = ${colors.module-fg}
+content-background = #3c3836 
+content-foreground = #ffffff 
 content-padding = 2
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
