--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,41 +5,32 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:monospace 8
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-# Polybar
+# Startup some apps
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-# Window compositor
-exec_always --no-startup-id picom --experimental-backends --config $HOME/.config/picom/picom.conf
-
-# Nightlight (Redshift)
+exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf
 exec_always --no-startup-id redshift -P -O 3000
+exec --no-startup-id nitrogen --restore
+#exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+w kill
 
 # change focus
 bindsym $mod+j focus left
@@ -65,31 +56,28 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
+# split in horizontal and vertical orientation
 bindsym $mod+h split h
-
-# split in vertical orientation
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+#bindsym $mod+s layout stacking
+#bindsym $mod+w layout tabbed
+#bindsym $mod+e layout toggle split
+bindsym $mod+Shift+t layout tabbed
+bindsym $mod+t layout toggle split
 
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
+# toggle tiling / floating & change focus
+bindsym $mod+s floating toggle
+bindsym $mod+Shift+s focus mode_toggle
 bindsym $mod+a focus parent
+#bindsym $mod+Shift+space floating toggle
+#bindsym $mod+space focus mode_toggle
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+# workspace names
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -156,13 +144,14 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Shift+w sticky toggle
 bindsym $mod+Control+Left workspace prev
 bindsym $mod+Control+Right workspace next
+bindsym $mod+minus move scratchpad
+bindsym $mod+plus scratchpad show
 
 # --- System
 bindsym $mod+Shift+p exec "i3lock -c '000000'"
 
 # --- Navigation
 bindsym XF86Search exec "catfish"
-bindsym $mod+Shift+s exec "catfish"
 bindsym $mod+n exec "thunar"
 
 # --- Print
@@ -170,7 +159,7 @@ bindsym Print exec "flameshot gui"
 
 # --- Rofi
 bindsym $mod+d exec "$HOME/.config/rofi/launchers/dmenu_launcher.sh"
-bindsym $mod+p exec "$HOME/.config/rofi/launchers/apps.sh"
+bindsym $mod+space exec "$HOME/.config/rofi/launchers/apps.sh"
 bindsym $mod+Tab exec "$HOME/.config/rofi/launchers/window.sh"
 bindsym $mod+F1 exec "$HOME/.config/rofi/launchers/clipboard.sh"
 bindsym $mod+F2 exec "$HOME/.config/rofi/launchers/roficalc.sh"
@@ -194,14 +183,24 @@ bindsym $mod+b exec polybar-msg cmd toggle
 
 # Custom windows rules
 for_window [class="flameshot"] floating enable
-for_window [class="xfce4-terminal" title="^Terminal -"] floating enable
-for_window [class="Xfce4-terminal" title="^Terminal -"] floating enable
 for_window [title="^Android Emulator -"] floating enable
+for_window [title="^Developer Tools - Vivaldi"] floating enable
+for_window [class="Gcolor3"] floating enable
+for_window [class="gcolor3"] floating enable
+for_window [class="Pavucontrol"] floating enable
+for_window [class="pavucontrol"] floating enable
+for_window [class="Yad" title="yad-calendar"] floating enable
 
 # i3 gaps
-for_window [class=".*"] border pixel 3
-for_window [title="^Android Emulator -"] border pixel 0
+for_window [class=".*"] border pixel 0
 gaps inner 10
 
-# i3 generic rules
-workspace_layout tabbed
+# Colors
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
