--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,206 +1,6 @@
-# Default mod key (in this case "Super key")
-set $mod Mod4
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 8
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# Startup some apps
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf
-exec_always --no-startup-id redshift -P -O 3000
-exec --no-startup-id nitrogen --restore
-#exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec xfce4-terminal
-
-# kill focused window
-bindsym $mod+w kill
-
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal and vertical orientation
-bindsym $mod+h split h
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-#bindsym $mod+s layout stacking
-#bindsym $mod+w layout tabbed
-#bindsym $mod+e layout toggle split
-bindsym $mod+Shift+t layout tabbed
-bindsym $mod+t layout toggle split
-
-# toggle tiling / floating & change focus
-bindsym $mod+s floating toggle
-bindsym $mod+Shift+s focus mode_toggle
-bindsym $mod+a focus parent
-#bindsym $mod+Shift+space floating toggle
-#bindsym $mod+space focus mode_toggle
-
-# workspace names
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
-# switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-# Custom shortcuts
-# --- i3
-bindsym $mod+Shift+w sticky toggle
-bindsym $mod+Control+Left workspace prev
-bindsym $mod+Control+Right workspace next
-bindsym $mod+minus move scratchpad
-bindsym $mod+plus scratchpad show
-
-# --- System
-bindsym $mod+Shift+p exec "i3lock -c '000000'"
-
-# --- Navigation
-bindsym XF86Search exec "catfish"
-bindsym $mod+n exec "thunar"
-
-# --- Print
-bindsym Print exec "flameshot gui"
-
-# --- Rofi
-bindsym $mod+d exec "$HOME/.config/rofi/launchers/dmenu_launcher.sh"
-bindsym $mod+space exec "$HOME/.config/rofi/launchers/apps.sh"
-bindsym $mod+Tab exec "$HOME/.config/rofi/launchers/window.sh"
-bindsym $mod+F1 exec "$HOME/.config/rofi/launchers/clipboard.sh"
-bindsym $mod+F2 exec "$HOME/.config/rofi/launchers/roficalc.sh"
-bindsym $mod+F3 exec "$HOME/.config/rofi/launchers/rofimoji.sh"
-bindsym $mod+F4 exec "$HOME/.config/rofi/launchers/rofilocate.sh"
-bindsym $mod+F5 exec "$HOME/.config/rofi/launchers/rofifilebrowser.sh"
-bindsym $mod+m exec "$HOME/.config/rofi/launchers/rofihud.sh"
-
-# --- Brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5 && $refresh_i3status
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5 && $refresh_i3status
-
-# --- Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# --- IPC
-bindsym $mod+b exec polybar-msg cmd toggle
-
-# Custom windows rules
-for_window [class="flameshot"] floating enable
-for_window [title="^Android Emulator -"] floating enable
-for_window [title="^Developer Tools - Vivaldi"] floating enable
-for_window [class="Gcolor3"] floating enable
-for_window [class="gcolor3"] floating enable
-for_window [class="Pavucontrol"] floating enable
-for_window [class="pavucontrol"] floating enable
-for_window [class="Yad" title="yad-calendar"] floating enable
-
-# i3 gaps
-for_window [class=".*"] border pixel 0
-gaps inner 10
-
-# Colors
-# class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-
-client.background       #ffffff
+include ~/.config/i3/general.conf
+include ~/.config/i3/startup.conf
+include ~/.config/i3/i3_binds.conf
+include ~/.config/i3/custom_binds.conf
+include ~/.config/i3/rules.conf
+include ~/.config/i3/colors.conf
