Update polybar config
- Update battery icon
- Update bar widgets positions (remove, move, etc...)

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -43,9 +43,9 @@ font-3 = Font Awesome 5 Free Solid:pixelsize=12:antialias=true;3
 font-4 = Font Awesome 5 Free Regular:pixelsize=12:antialias=true;3
 font-5 = Font Awesome 5 Brands:pixelsize=12:antialias=true;3
 
-modules-left = launcher i3 
-modules-center = xwindow 
-modules-right = player-mpris-tail pulseaudio-microphone pulseaudio backlight battery memory cpu system-fan-speed popup-calendar
+modules-left = i3 
+modules-center = popup-calendar
+modules-right = player-mpris-tail pulseaudio-microphone pulseaudio backlight battery memory cpu system-fan-speed
 
 ;tray-position = right
 ;tray-padding = 2
