--- a/.config/polybar/modules/popup-calendar.ini
+++ b/.config/polybar/modules/popup-calendar.ini
@@ -5,4 +5,5 @@ interval = 5
 click-left = ~/.config/polybar/scripts/popup-calendar.sh --popup &
 
 format = <label>
-label =   %output%
+;label =   %output%
+label = %output%
