feat: Sync NVIM changes
- New theme adjusts
- New maps
- Some coc adjusts

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -5,5 +5,17 @@
     "htmldjango",
     "blade",
     "twig"
-  ]
+  ],
+  "suggest.floatConfig": {
+    "border": true
+  },
+  "diagnostic.floatConfig": {
+    "border": true
+  },
+  "signature.floatConfig": {
+    "border": true
+  },
+  "hover.floatConfig": {
+    "border": true
+  }
 }
