--- a/.config/picom/picom_glass.conf
+++ b/.config/picom/picom_glass.conf
@@ -26,10 +26,20 @@ fade-out-step = 0.03;
 #   Transparency / Opacity      #
 #################################
 
-inactive-opacity = 1.0;
+inactive-opacity = 0.9;
 frame-opacity = 1.0;
-active-opacity = 1.0
+inactive-opacity-override = true
+inactive-opacity-override = false;
+active-opacity = 0.9
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
+opacity-rule = [
+  "0:_NET_WM_STATE@[*]:32a *= '_NET_WM_STATE_HIDDEN'",
+  "100:name *= 'YouTube'",
+  "100:name *= 'Disney+'",
+  "100:name *= 'Netflix'",
+  "100:class_g *= 'csgo_linux64'",
+]
+
 
 #################################
 #           Corners             #
@@ -39,6 +49,20 @@ corner-radius = 0
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
+];
+
+
+#################################
+#     Background-Blurring       #
+#################################
+
+blur-method = "dual_kawase"
+blur-size = 12
+blur-kern = "3x3box";
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -56,10 +80,10 @@ use-damage = true;
 log-level = "warn";
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1.0; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1.0; }
-  dropdown_menu = { opacity = 1.0; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
 };
 
