--- a/.config/i3/rules.conf
+++ b/.config/i3/rules.conf
@@ -2,12 +2,18 @@
 for_window [class="flameshot"] floating enable
 for_window [title="^Android Emulator -"] floating enable
 for_window [title="^Developer Tools - Vivaldi"] floating enable
+for_window [class="^crx_"] floating enable
 for_window [class="Gcolor3"] floating enable
 for_window [class="gcolor3"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="pavucontrol"] floating enable
 for_window [class="Yad" title="yad-calendar"] floating enable
+for_window [class="kitty-float"] floating enable, resize set 1000 600
+for_window [class="zoom"] no_focus
+
+# Generic rules
+for_window [floating class='!yad-calendar'] move position center
 
 # i3 gaps
-for_window [class=".*"] border pixel 0
+for_window [class=".*"] border pixel 2 
 
