--- a/.config/i3/startup.conf
+++ b/.config/i3/startup.conf
@@ -1,6 +1,17 @@
 # Startup some apps
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf
+
+# Widgets and bars
+exec_always --no-startup-id $HOME/.config/polybar/launch_i3.sh
+
+# Wallpaper and screen
 exec_always --no-startup-id redshift -P -O 3000
 exec --no-startup-id nitrogen --restore
-#exec --no-startup-id nm-applet
+
+# Background services, applets, etc...
+exec_always --no-startup-id clipmenud
+exec_always --no-startup-id $HOME/.scripts/volume_watcher.sh
+exec --no-startup-id dunst
+
+# Window compositor
+exec_always --no-startup-id $HOME/.local/bin/flashfocus
+exec_always --no-startup-id picom --experimental-backends --config $HOME/.config/picom/picom.conf
