--- a/.config/i3/custom_binds.conf
+++ b/.config/i3/custom_binds.conf
@@ -9,25 +9,45 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
+# --- Brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
+bindsym $mod+Shift+semicolon exec --no-startup-id light -A 5
+bindsym $mod+Shift+comma exec --no-startup-id light -U 5
+
+# --- Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+bindsym $mod+semicolon exec playerctl play-pause
+bindsym $mod+comma exec playerctl next
+bindsym $mod+period exec playerctl previous
+
 # --- i3
 bindsym $mod+Shift+w sticky toggle
 bindsym $mod+Control+Left workspace prev
 bindsym $mod+Control+Right workspace next
+
+# ------ scratchpad
 bindsym $mod+minus move scratchpad
 bindsym $mod+plus scratchpad show
+bindsym $mod+d [class="discord"] scratchpad show
+bindsym $mod+c [class="kitty"] scratchpad show
+bindsym $mod+i [title="^Developer Tools - Vivaldi"] scratchpad show
 
 # --- System
 bindsym $mod+Shift+p exec "i3lock -c '000000'"
 
 # --- Navigation
 bindsym XF86Search exec "catfish"
-bindsym $mod+n exec "thunar"
+bindsym $mod+n exec "SHELL=/bin/zsh kitty -e ranger"
 
 # --- Print
 bindsym Print exec "flameshot gui"
 
 # --- Rofi
-bindsym $mod+d exec "$HOME/.config/rofi/launchers/dmenu_launcher.sh"
+bindsym $mod+Shift+d exec "$HOME/.config/rofi/launchers/dmenu_launcher.sh"
 bindsym $mod+space exec "$HOME/.config/rofi/launchers/apps.sh"
 bindsym $mod+Tab exec "$HOME/.config/rofi/launchers/window.sh"
 bindsym $mod+F1 exec "$HOME/.config/rofi/launchers/clipboard.sh"
@@ -36,16 +56,6 @@ bindsym $mod+F3 exec "$HOME/.config/rofi/launchers/rofimoji.sh"
 bindsym $mod+F4 exec "$HOME/.config/rofi/launchers/rofilocate.sh"
 bindsym $mod+F5 exec "$HOME/.config/rofi/launchers/rofifilebrowser.sh"
 bindsym $mod+m exec "$HOME/.config/rofi/launchers/rofihud.sh"
-
-# --- Brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5 && $refresh_i3status
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5 && $refresh_i3status
-
-# --- Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
 
 # --- IPC
 bindsym $mod+b exec polybar-msg cmd toggle
