feat: Sync i3 config
- Prevent focus stealing

--- a/.config/i3/rules.conf
+++ b/.config/i3/rules.conf
@@ -10,6 +10,7 @@ for_window [class="pavucontrol"] floating enable
 for_window [class="Yad" title="yad-calendar"] floating enable
 for_window [class="kitty-float"] floating enable, resize set 1000 600
 for_window [class="zoom"] no_focus
+no_focus [class="zoom"]
 
 # Generic rules
 for_window [floating class='!yad-calendar'] move position center
