--- a/.config/i3/general.conf
+++ b/.config/i3/general.conf
@@ -1,15 +1,8 @@
 # General i3 config file
 
-# Default mod key (in this case "Super key")
 set $mod Mod4
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
 font pango:monospace 8
-
-# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
-# i3-gaps
 gaps inner 10
+focus_on_window_activation urgent
 
