feat: Sync polybar config
- Change modules display (avoid use label, keep minimal pattern)
- Others layout changes...

--- a/.config/polybar/config_minimal.ini
+++ b/.config/polybar/config_minimal.ini
@@ -12,10 +12,11 @@ include-file = ~/.config/polybar/modules/modules-enabled.ini
 
 ;; Bar Settings
 [bar/i3]
-width = 100%
+width = 20%
 height = 30
-radius = 0
+radius = 5
 fixed-center = true
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -23,7 +24,8 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 0
+
+border-size = 10
 border-bottom-size = 0
 border-color = #00000000
 
@@ -40,9 +42,9 @@ font-3 = Font Awesome 5 Free Solid:pixelsize=12:antialias=true;3
 font-4 = Font Awesome 5 Free Regular:pixelsize=12:antialias=true;3
 font-5 = Font Awesome 5 Brands:pixelsize=12:antialias=true;3
 
-modules-left = i3
-modules-center = xwindow
-modules-right = notifications pulseaudio-microphone pulseaudio light battery-status memory cpu system-fan-speed popup-calendar
+modules-left =
+modules-center =
+modules-right = pulseaudio-microphone pulseaudio light battery-status memory cpu system-fan-speed popup-calendar
 
 wm-restack = i3
 
@@ -57,7 +59,7 @@ enable-ipc = true
 
 ;; Bar Settings
 [bar/bspwm]
-width = 100%
+width = 20%
 height = 30
 radius = 5
 fixed-center = true
@@ -86,8 +88,8 @@ font-3 = Font Awesome 5 Free Solid:pixelsize=12:antialias=true;3
 font-4 = Font Awesome 5 Free Regular:pixelsize=12:antialias=true;3
 font-5 = Font Awesome 5 Brands:pixelsize=12:antialias=true;3
 
-modules-left = bspwm
-modules-center = xwindow
+modules-left =
+modules-center =
 modules-right = pulseaudio-microphone pulseaudio light battery-status memory cpu system-fan-speed popup-calendar
 
 wm-restack = bspwm
