--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -1,7 +1,24 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground}
-; format-underline = #f90000
-label = %percentage:2%%
+
+format = %{A1:$HOME/.scripts/kitty-float.sh top:}<ramp-load>%{A}
+
+ramp-load-0 = 
+ramp-load-1 = 
+ramp-load-2 = 
+ramp-load-3 = 
+ramp-load-4 = 
+ramp-load-5 = 
+ramp-load-6 = 
+ramp-load-7 = 
+
+ramp-load-0-foreground = #ffffff
+ramp-load-1-foreground = #ffffff
+ramp-load-2-foreground = #ffd700
+ramp-load-3-foreground = #ffd700
+ramp-load-4-foreground = #ff6000
+ramp-load-5-foreground = #ff6000
+ramp-load-6-foreground = #ff0000
+ramp-load-7-foreground = #ff0000
+
