--- a/.config/polybar/modules/modules-enabled.ini
+++ b/.config/polybar/modules/modules-enabled.ini
@@ -14,3 +14,8 @@ include-file =  ~/.config/polybar/modules/pulseaudio.ini
 include-file =  ~/.config/polybar/modules/alsa.ini
 include-file =  ~/.config/polybar/modules/backlight.ini
 include-file =  ~/.config/polybar/modules/xwindow.ini
+include-file =  ~/.config/polybar/modules/light.ini
+include-file =  ~/.config/polybar/modules/battery-status.ini
+include-file =  ~/.config/polybar/modules/sound.ini
+include-file =  ~/.config/polybar/modules/notification.ini
+
