--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -1,7 +1,24 @@
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground}
-; format-underline = #4bffdc
-label = %percentage_used%%
+
+format = %{A1:$HOME/.scripts/kitty-float.sh top:}<ramp-used>%{A}
+
+ramp-used-0 = 
+ramp-used-1 = 
+ramp-used-2 = 
+ramp-used-3 = 
+ramp-used-4 = 
+ramp-used-5 = 
+ramp-used-6 = 
+ramp-used-7 = 
+
+ramp-load-0-foreground = #ffffff
+ramp-load-1-foreground = #ffffff
+ramp-load-2-foreground = #ffd700
+ramp-load-3-foreground = #ffd700
+ramp-load-4-foreground = #ff6000
+ramp-load-5-foreground = #ff6000
+ramp-load-6-foreground = #ff0000
+ramp-load-7-foreground = #ff0000
+
