--- a/.config/polybar/modules/system-fan-speed.ini
+++ b/.config/polybar/modules/system-fan-speed.ini
@@ -1,7 +1,9 @@
 [module/system-fan-speed]
 type = custom/script
-exec = ~/.config/polybar/scripts/system-fan-speed.sh
+exec = ~/.config/polybar/scripts/system-fan-speed-icon.sh
 interval = 5
 
 format = <label>
-label =   %output%
+label = %output%
+
+click-left = ~/.scripts/kitty-float.sh sensors
