--- a/.config/polybar/modules/xwindow.ini
+++ b/.config/polybar/modules/xwindow.ini
@@ -1,6 +1,8 @@
 [module/xwindow]
-format = <label>
+
+format = %{A1:$HOME/.config/rofi/launchers/window.sh:}<label> %{A}
 format-padding = 4
+format-background = ${colors.background}
 
 type = internal/xwindow
 label = %title:0:30:...%
